add serverside code: setup mongod, express, dist build, add npm modules, nodemon

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,9 @@ yarn-error.log
 # System Files
 .DS_Store
 Thumbs.db
+
+# Exclude tsc generated files
+/src/**/*.js
+/server/**/*.js
+/server/**/*.js
+/server/**/*.js.map
