--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "concurrently --kill-others \"npm run _server:run\" \"ng serve --aot --progress=false\"",
+    "build": "ng build --prod --aot --output-path=dist/client && npm run _server:build",
+    "_server:run": "tsc -p ./server && concurrently \"tsc -w -p ./server\" \"nodemon --delay 5 dist/server/bin/www.js\" ",
+    "_server:build": "tsc -p ./server",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -22,9 +24,15 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
-    "core-js": "^2.4.1",
+    "body-parser": "^1.18.0",
     "bootstrap": "^4.0.0-beta",
+    "core-js": "^2.4.1",
+    "cors": "^2.8.4",
+    "errorhandler": "^1.5.0",
+    "express": "^4.15.4",
     "jquery": "^3.2.1",
+    "mongoose": "^4.10.8",
+    "morgan": "^1.8.2",
     "popper.js": "^1.12.5",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
@@ -33,10 +41,17 @@
     "@angular/cli": "1.3.2",
     "@angular/compiler-cli": "^4.2.4",
     "@angular/language-service": "^4.2.4",
+    "@types/body-parser": "^1.16.5",
+    "@types/cors": "^2.8.1",
+    "@types/errorhandler": "0.0.31",
+    "@types/express": "^4.0.37",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
+    "@types/mongoose": "^4.7.21",
+    "@types/morgan": "^1.7.32",
     "@types/node": "~6.0.60",
     "codelyzer": "~3.1.1",
+    "concurrently": "^3.5.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
@@ -45,6 +60,7 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "nodemon": "^1.12.0",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.3.2",
