--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "bluebird": "^3.5.0",
     "body-parser": "^1.18.0",
     "bootstrap": "^4.0.0-beta",
     "core-js": "^2.4.1",
@@ -41,6 +42,7 @@
     "@angular/cli": "1.3.2",
     "@angular/compiler-cli": "^4.2.4",
     "@angular/language-service": "^4.2.4",
+    "@types/bluebird": "^3.5.10",
     "@types/body-parser": "^1.16.5",
     "@types/cors": "^2.8.1",
     "@types/errorhandler": "0.0.31",
